# repoupdate

./: .gitignore  README.md  pyproject.toml
repoupdate/: paths.py  pull.py  sync.py
tests/: test_repoupdate.py
